// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StartPanel for board of experts unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--board-of-experts"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            boardOfExperts
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="boardOfExperts"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="16"
                role="img"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 640 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M211.2 96a64 64 0 10-128 0 64 64 0 10128 0zM32 256c0 17.7 14.3 32 32 32h85.6c10.1-39.4 38.6-71.5 75.8-86.6-9.7-6-21.2-9.4-33.4-9.4H96c-35.3 0-64 28.7-64 64zm461.6 32H576c17.7 0 32-14.3 32-32 0-35.3-28.7-64-64-64h-96c-11.7 0-22.7 3.1-32.1 8.6 38.1 14.8 67.4 47.3 77.7 87.4zm-102.4-61.6c-6.9-1.6-14.2-2.4-21.6-2.4h-96c-8.5 0-16.7 1.1-24.5 3.1-30.8 8.1-55.6 31.1-66.1 60.9-3.5 10-5.5 20.8-5.5 32 0 17.7 14.3 32 32 32h224c17.7 0 32-14.3 32-32 0-11.2-1.9-22-5.5-32-10.8-30.7-36.8-54.2-68.9-61.6zM563.2 96a64 64 0 10-128 0 64 64 0 10128 0zm-241.6 96a80 80 0 100-160 80 80 0 100 160zM32 416c-17.7 0-32 14.3-32 32s14.3 32 32 32h576c17.7 0 32-14.3 32-32s-14.3-32-32-32H32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel on instruct unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.instructButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageInstructExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completion provider down unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori-tooltip memori-tooltip--align-topLeft memori--completion-provider-status--tooltip"
      >
        <div
          class="memori-tooltip--content"
        >
          <div>
            <p>
              completionProviderDown
            </p>
            <p>
              <a
                href="https://status.openai.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                completionProviderCheckStatusPage
              </a>
            </p>
          </div>
        </div>
        <div
          class="memori-tooltip--trigger"
        >
          <svg
            aria-hidden="true"
            class="memori--completion-provider-status--icon"
            focusable="false"
            role="img"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
            />
          </svg>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completions enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought but unlogged unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="20"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 48 48"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.106 48v-2.745a2.213 2.213 0 012.213-2.212h6.11a2.392 2.392 0 002.326-2.466v-3.223a1.834 1.834 0 01.459-1.145 2.912 2.912 0 00.712-1.926l-.007-.667a1.016 1.016 0 01.651-.952h1.067a1.363 1.363 0 001.051-.456 1.304 1.304 0 00.19-1.395 67.032 67.032 0 01-3.037-7.51 4.767 4.767 0 01-.217-1.507l-.002-4.994a14.513 14.513 0 00-.552-3.963l-.006-.022a13.959 13.959 0 00-3.137-5.702q-.479-.516-1.006-1.003a17.67 17.67 0 00-.677-.623A18.303 18.303 0 0024.194 1a19.617 19.617 0 00-12.539 4.489 17.555 17.555 0 00-3.945 21.69C9.945 31.507 11.694 38.622 12.14 46v2"
                stroke-miterlimit="10"
              />
              <path
                d="M27.917 12L31.417 12"
              />
              <path
                d="M27.917 26L31.417 26"
              />
              <path
                d="M29.667 12L29.667 26"
              />
              <path
                d="M23.992 26L19.904 12 19.226 12 15.159 26"
              />
              <path
                d="M16.854 21.133L22.276 21.133"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThought
        </h2>
        <p>
          deepThoughtPreDisclaimerUnlogged
        </p>
        <p>
          <button
            class="memori-button memori-button--outlined memori-button--rounded"
          >
            Login
          </button>
        </p>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled but without permission flag unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="20"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 48 48"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.106 48v-2.745a2.213 2.213 0 012.213-2.212h6.11a2.392 2.392 0 002.326-2.466v-3.223a1.834 1.834 0 01.459-1.145 2.912 2.912 0 00.712-1.926l-.007-.667a1.016 1.016 0 01.651-.952h1.067a1.363 1.363 0 001.051-.456 1.304 1.304 0 00.19-1.395 67.032 67.032 0 01-3.037-7.51 4.767 4.767 0 01-.217-1.507l-.002-4.994a14.513 14.513 0 00-.552-3.963l-.006-.022a13.959 13.959 0 00-3.137-5.702q-.479-.516-1.006-1.003a17.67 17.67 0 00-.677-.623A18.303 18.303 0 0024.194 1a19.617 19.617 0 00-12.539 4.489 17.555 17.555 0 00-3.945 21.69C9.945 31.507 11.694 38.622 12.14 46v2"
                stroke-miterlimit="10"
              />
              <path
                d="M27.917 12L31.417 12"
              />
              <path
                d="M27.917 26L31.417 26"
              />
              <path
                d="M29.667 12L29.667 26"
              />
              <path
                d="M23.992 26L19.904 12 19.226 12 15.159 26"
              />
              <path
                d="M16.854 21.133L22.276 21.133"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThought
        </h2>
        <p>
          deepThoughtPreDisclaimerNotAllowed
        </p>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="20"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 48 48"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.106 48v-2.745a2.213 2.213 0 012.213-2.212h6.11a2.392 2.392 0 002.326-2.466v-3.223a1.834 1.834 0 01.459-1.145 2.912 2.912 0 00.712-1.926l-.007-.667a1.016 1.016 0 01.651-.952h1.067a1.363 1.363 0 001.051-.456 1.304 1.304 0 00.19-1.395 67.032 67.032 0 01-3.037-7.51 4.767 4.767 0 01-.217-1.507l-.002-4.994a14.513 14.513 0 00-.552-3.963l-.006-.022a13.959 13.959 0 00-3.137-5.702q-.479-.516-1.006-1.003a17.67 17.67 0 00-.677-.623A18.303 18.303 0 0024.194 1a19.617 19.617 0 00-12.539 4.489 17.555 17.555 0 00-3.945 21.69C9.945 31.507 11.694 38.622 12.14 46v2"
                stroke-miterlimit="10"
              />
              <path
                d="M27.917 12L31.417 12"
              />
              <path
                d="M27.917 26L31.417 26"
              />
              <path
                d="M29.667 12L29.667 26"
              />
              <path
                d="M23.992 26L19.904 12 19.226 12 15.159 26"
              />
              <path
                d="M16.854 21.133L22.276 21.133"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThoughtDisclaimerTitle
        </h2>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with integrationConfig unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with multilangual unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--language-chooser"
      >
        <label
          for="user-lang-pref"
          id="user-lang-pref-label"
        >
          write_and_speak.iWantToTalkToIn
        </label>
        <select
          aria-labelledby="user-lang-pref-label"
          class="memori-select--button"
          id="user-lang-pref"
        >
          <option
            aria-label="Italiano"
            value="IT"
          >
            Italiano
          </option>
          <option
            aria-label="English"
            value="EN"
          >
            English
          </option>
          <option
            aria-label="Deutsch"
            value="DE"
          >
            Deutsch
          </option>
          <option
            aria-label="Español"
            value="ES"
          >
            Español
          </option>
          <option
            aria-label="Français"
            value="FR"
          >
            Français
          </option>
          <option
            aria-label="Português"
            value="PT"
          >
            Português
          </option>
          <option
            aria-label="Українська"
            value="UK"
          >
            Українська
          </option>
          <option
            aria-label="Русский"
            value="RU"
          >
            Русский
          </option>
          <option
            aria-label="Polski"
            value="PL"
          >
            Polski
          </option>
          <option
            aria-label="Suomi"
            value="FI"
          >
            Suomi
          </option>
          <option
            aria-label="Ελληνικά"
            value="EL"
          >
            Ελληνικά
          </option>
          <option
            aria-label="العربية"
            value="AR"
          >
            العربية
          </option>
          <option
            aria-label="中文"
            value="ZH"
          >
            中文
          </option>
          <option
            aria-label="日本語"
            value="JA"
          >
            日本語
          </option>
        </select>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with position required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--needsPosition"
    >
      <p>
        write_and_speak.requirePositionHelp
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori-button--with-icon memori--start-button"
      >
        <span
          class="memori-button--icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </span>
        widget.position
      </button>
    </div>
  </div>
</div>
`;
